# Bangla-Handwritten-Word-Recognition-System

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  labels.json  main.py  pyproject.toml  requirements.txt  train.py
models/: model.pt
